# ICRA-2019-DJI-RoboMaster

./: .gitignore  README.md
apriltags2_ros/apriltags2_ros/: CMakeLists.txt
apriltags2_ros/apriltags2_ros/config/: tags.yaml
apriltags2_ros/apriltags2_ros/launch/: continuous_detection.launch
apriltags2_ros/apriltags2_ros/src/: continuous_detector.cpp
apriltags2_ros/apriltags2_ros/srv/: Leonard_StartVision.srv
doc/: BT2019v2.graffle  BT2019v3.graffle  BT2019v4.graffle  BT_solution.tex  document.tex  framework.graffle  标题分节.key
doc/BT2019v1.graffle/: data.plist  image3.tiff
icra_decision/: CMakeLists.txt  README.md  config.yaml  icra2019.launch  package.xml
icra_decision/include/icra_decision/: actions.h  behavior_node.h  behavior_tree.h  blackboard.h  goals.h
icra_decision/msgs/: EnemyDetect.msg  GoalTask.msg  SupplierStatus.msg
icra_decision/src/: decision.cpp
leonard_decision/: CMakeLists.txt  package.xml
leonard_decision/config/: icra2019.yaml
leonard_decision/include/leonard_decision/: actions.h  behavior_node.h  behavior_tree.h  blackboard.h  goals.h  log.h  types.h
leonard_decision/launch/: end.launch  icra2019.launch
leonard_decision/msg/: Bullet.msg  GoalTask.msg  TurnAngle.action
leonard_decision/src/: decision.cpp
roborts/: package.xml
roborts_base/: CMakeLists.txt  infantry_info.h  log.h  package.xml  protocol_define.h  serial_comm_node.cpp  serial_comm_node.h  test_refree_node.cpp  test_refree_node.h  test_serial_node.cpp  test_serial_node.h  test_turnangle_client.cpp  turn_angle_action.cpp  turn_angle_action.h  writetxt.h
roborts_base/config/: roborts_base_parameter.yaml  test_refree_parameter.yaml
roborts_base/hardware/: hardware_interface.h  serial_device.cpp  serial_device.h
roborts_base/launch/: test.launch  test_refree.launch
roborts_base/msg/: GoalTask.msg
roborts_base/srv/: TestRefree.srv
roborts_bringup/: testconnection.launch
roborts_bringup/launch/: .2v2_refree.launch.swp  .roborts.launch.swp  2v2.launch  2v2_refree.launch  base.launch  cxntest.launch  game.launch  icra_stage.launch  roborts.launch  roborts_stage.launch  static_tf.launch  test_refree.launch
roborts_bringup/maps/: icra2019.yaml  icra2019_decision.pgm  icra2019_decision.yaml
roborts_bringup/rviz/: roborts.rviz  roborts_origin.rviz  roborts_stage.rviz
roborts_bringup/worlds/: icra2019.world
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: .costmap_parameter_config_for_decision.prototxt.swo  .costmap_parameter_config_for_decision.prototxt.swp  caution_layer_config.prototxt  costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  inflation_layer_config.prototxt  inflation_layer_config_min.prototxt  obstacle_layer_config.prototxt  static_layer_config.prototxt  static_layer_config_decision.prototxt
roborts_costmap/include/costmap/: caution_layer.h  costmap_interface.h  inflation_layer.h  layer.h  layered_costmap.h  map_common.h  obstacle_layer.h
roborts_costmap/proto/: caution_layer_setting.proto  costmap_parameter_setting.proto  obstacle_layer_setting.proto
roborts_costmap/src/: caution_layer.cpp  costmap_interface.cpp  layered_costmap.cpp  obstacle_layer.cpp  static_layer.cpp
roborts_localization/: CMakeLists.txt  localization_math.cpp  localization_math.h  localization_node.cpp  localization_node.h  log.h  package.xml  supply_node.cpp  supply_node.h  supply_node_version2.cpp  supply_node_version2.h  test_client_node.cpp  types.h  writetxt.h
roborts_localization/action/: LocalPlanner.action  SupplyPid.action
roborts_localization/amcl/: CMakeLists.txt  amcl.cpp  amcl.h
roborts_localization/amcl/config/: amcl.yaml
roborts_localization/amcl/map/: amcl_map.cpp  amcl_map.h
roborts_localization/amcl/particle_filter/: particle_filter.cpp  particle_filter.h  particle_filter_gaussian_pdf.cpp  particle_filter_gaussian_pdf.h  particle_filter_kdtree.cpp  particle_filter_kdtree.h  particle_filter_sample.h
roborts_localization/amcl/sensors/: sensor_laser.cpp  sensor_laser.h  sensor_odom.cpp  sensor_odom.h
roborts_localization/config/: .localization.yaml.swo  .localization.yaml.swp  localization.yaml
roborts_localization/launch/: roborts_localization.launch  test.launch
roborts_localization/srv/: SupplyTagId.srv
roborts_msgs/: CMakeLists.txt
roborts_msgs/action/: LocalPlanner.action
roborts_msgs/msg/: EnemyDetect.msg  GimbalAngle.msg
roborts_msgs/msg/referee_system/: ProjectileSupply.msg
roborts_msgs/srv/: ChassisMode.srv  ForceUpdateAmcl.srv
roborts_planning/global_planner/: CMakeLists.txt  global_planner_algorithms.h
roborts_planning/global_planner/a_star_planner/: a_star_planner.cpp  a_star_planner.h
roborts_planning/global_planner/config/: global_planner_config.prototxt
roborts_planning/global_planner/lazy_theta_star_planner/: CMakeLists.txt  lazy_theta_star_planner.cpp  lazy_theta_star_planner.h
roborts_planning/local_planner/: CMakeLists.txt
roborts_planning/local_planner/config/: local_planner.prototxt
roborts_planning/local_planner/dwa/: CMakeLists.txt
roborts_planning/local_planner/dwa/config/: dwa.prototxt
roborts_planning/local_planner/dwa/include/dwa/: dwa_alg.h  dwa_local_planner.h
roborts_planning/local_planner/dwa/proto/: dwa.proto
roborts_planning/local_planner/dwa/src/: dwa_alg.cpp  dwa_local_planner.cpp
roborts_planning/local_planner/src/: .local_planner_node.cpp.swp  local_planner_node.cpp  map_grid.cpp  robot_position_cost.cpp  teb_test.cpp
robots_detection/: CMakeLists.txt  README.md  package.xml
robots_detection/config/: param.yaml
robots_detection/launch/: robots_detection.launch
robots_detection/src/: armor.hpp  armor_debug.hpp  armor_ip.hpp  armor_mode.hpp  armor_param.hpp  armor_pos.hpp  armor_pre.hpp  robots_detection_node.cpp  robots_detection_node.hpp
sub_cam/: CMakeLists.txt  package.xml
sub_cam/config/: param.yaml
sub_cam/launch/: sub_cam.launch
sub_cam/src/: sub_cam_node.cpp  sub_cam_node.hpp  sub_cam_param.hpp
(+25 files in other folders)
